header overlapping buttons fix

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -19,6 +19,7 @@ header .logo {
   color: #fff;
   font-size: 18px;
   border-radius: 0px;
+  -webkit-app-region: no-drag;
 }
 .go-back-btn:hover {
   cursor: pointer;
@@ -27,6 +28,7 @@ header .logo {
   position: absolute;
   right: 10px;
   top: -3px;
+  -webkit-app-region: no-drag;
 }
 .buttons-wrap button {
   -webkit-touch-callout: none; /* iOS Safari */
